--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde_json = { version = "1.0.140", features = ["preserve_order"] }
+sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
 dotenv = "0.15.0"
 jsonwebtoken = "9.3.1"
 anyhow = "1.0.98"
 axum = { version = "0.8.3", features = ["multipart", "macros"] }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
 tokio = { version = "1.44.2", features = ["full", "io-util"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
