--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.44.2", features = ["full", "io-util"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 tracing-subscriber = "0.3.19"
+chrono = "0.4.41"
