--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
-sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
+sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio", "chrono"] }
 dotenv = "0.15.0"
 jsonwebtoken = "9.3.1"
 anyhow = "1.0.98"
@@ -15,4 +15,4 @@ tokio = { version = "1.44.2", features = ["full", "io-util"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 tracing-subscriber = "0.3.19"
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
