--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio-util = { version = "0.7.15", features = ["io"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 tracing-subscriber = "0.3.19"
 chrono = { version = "0.4.41", features = ["serde"] }
+gigalib = { git = "https://github.com/commmrade/gigalib.git" }
