--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ axum = { version = "0.8.3", features = ["multipart", "macros"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.44.2", features = ["full", "io-util"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
-tower-http = { version = "0.6.2", features = ["cors"] }
+tower-http = { version = "0.6.2", features = ["cors", "catch-panic"] }
 tracing-subscriber = "0.3.19"
 chrono = { version = "0.4.41", features = ["serde"] }
 gigalib = { git = "https://github.com/commmrade/gigalib.git" }
