--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tower-http = { version = "0.6.2", features = ["cors", "catch-panic"] }
 tracing-subscriber = "0.3.19"
 chrono = { version = "0.4.41", features = ["serde"] }
 gigalib = { git = "https://github.com/commmrade/gigalib.git" }
+axum-extra = { version = "0.10.1", features = ["query"] }
