--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tracing-subscriber = "0.3.19"
 chrono = { version = "0.4.41", features = ["serde"] }
 gigalib = { git = "https://github.com/commmrade/gigalib.git" }
 axum-extra = { version = "0.10.1", features = ["query"] }
+tower = { version = "0.5.2", features = ["limit", "buffer"] }
