--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ chrono = { version = "0.4.41", features = ["serde"] }
 gigalib = { git = "https://github.com/commmrade/gigalib.git" }
 axum-extra = { version = "0.10.1", features = ["query"] }
 tower = { version = "0.5.2", features = ["limit", "buffer"] }
+redis = { version = "0.31.0", features = ["r2d2"] }
+r2d2 = "0.8.10"
