--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ axum-extra = { version = "0.10.1", features = ["query"] }
 tower = { version = "0.5.2", features = ["limit", "buffer"] }
 redis = { version = "0.31.0", features = ["r2d2"] }
 r2d2 = "0.8.10"
+tracing = "0.1.41"
