--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ tower-http = { version = "0.6.2", features = ["cors", "catch-panic"] }
 tracing-subscriber = "0.3.19"
 chrono = { version = "0.4.41", features = ["serde"] }
 gigalib = { git = "https://github.com/commmrade/gigalib.git" }
-axum-extra = { version = "0.10.1", features = ["query"] }
+axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
 tower = { version = "0.5.2", features = ["limit", "buffer"] }
-redis = { version = "0.31.0", features = ["r2d2"] }
+# redis = { version = "0.31.0", features = ["r2d2"] }
 r2d2 = "0.8.10"
 tracing = "0.1.41"
 utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
